--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "antd": "^5.6.3",
     "autoprefixer": "10.4.14",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
     "next": "13.4.6",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   }
