--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@react-pdf/renderer": "^3.1.12",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
