--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=storage-bucket
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=sender-id
 NEXT_PUBLIC_FIREBASE_APP_ID=app-id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=analytic-id
-NEXTAUTH_URL=
+NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=xaCjqVqD4H2oLsPzafgRBoWLbc9MSHrdKQPsXpwQpQk
 GOOGLE_APPLICATION_CREDENTIALS=./facturesaas-firebase-adminsdk-cd9o7-997a3211dd.json
 FIREBASE_PROJECT_ID=facturesaas
